Bug 131015 - CRASH: using the pipette in Edit Contour dialog
Summary: CRASH: using the pipette in Edit Contour dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2020-02-28 16:52 UTC by Xisco Faulí
Modified: 2020-03-05 09:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast (762.33 KB, video/x-matroska)
2020-03-02 09:53 UTC, Xisco Faulí
Details
image (947 bytes, image/jpeg)
2020-03-02 10:06 UTC, Xisco Faulí
Details
gdb backtrace (29.34 KB, text/plain)
2020-03-03 17:10 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-02-28 16:52:16 UTC
Steps to reproduce:
1. Open writer
2. Insert an image
3. Right click - Wrap - Edit Contour
4. Select the pipette and click on the image

-> Crash

Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: 81d982f176751a6d5f13fcb72f425a29fd077c92
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-02-28 16:53:19 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=52fece12345161911da2a531213b7d5541192aad

author	Noel Grandin <noel.grandin@collabora.co.uk>	2020-01-15 12:43:19 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2020-01-15 14:33:52 +0100
commit 52fece12345161911da2a531213b7d5541192aad (patch)
tree fd27e700dc56ca5293e88746dbeed7cc08a57f3a
parent 0a76eb059a77c799e6ce8400c558fc4dd1d866aa (diff)
tweak GetBitmap methods in BitmapEx

Bisected with: bibisect-linux64-6.5

Adding Cc: to Noel Grandin
Comment 2 Julien Nabet 2020-02-28 19:40:20 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this with gtk3, gen and kf5 renderings.

Just for curiosity, shouldn't the cursor be a pipette when choosing pipette?
If yes, I'll submit a new bugtracker because I just see an hand.
Comment 3 Noel Grandin 2020-03-01 07:41:44 UTC
Cant' repro this either with current master on gtk or gen on Linux.
Comment 4 Xisco Faulí 2020-03-02 09:53:56 UTC
Created attachment 158304 [details]
screencast
Comment 5 Noel Grandin 2020-03-02 09:59:06 UTC
x1sco, it may have something do with that specific image you are using, could you try attaching that please?

(I notice that it looks wrong in the edit contour dialog, which is suspiciuous)
Comment 6 Xisco Faulí 2020-03-02 10:06:53 UTC
Created attachment 158306 [details]
image
Comment 7 Noel Grandin 2020-03-02 11:46:43 UTC
Nope, sorry, even with that image, cannot reproduce
Comment 8 Xisco Faulí 2020-03-02 12:12:26 UTC
For the record, I can't reproduce it in

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 8e323fcacebad1afe9d867b846722a6b9bf20f78
CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-US
Calc: threaded
Comment 9 Julien Nabet 2020-03-02 20:55:41 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this with image attached (gtk3 or gen rendering).
Comment 10 Xisco Faulí 2020-03-03 17:10:34 UTC
Created attachment 158349 [details]
gdb backtrace
Comment 11 Julien Nabet 2020-03-03 19:18:12 UTC
Xisco: do you build yourself LO sources? if no, how do you get 7.0 build?
Indeed "warning: Could not find DWO CU" is a bit weird.
Comment 12 Xisco Faulí 2020-03-03 19:51:08 UTC
(In reply to Julien Nabet from comment #11)
> Xisco: do you build yourself LO sources? if no, how do you get 7.0 build?
> Indeed "warning: Could not find DWO CU" is a bit weird.

I used a debug daily build for the backtrace. I also reproduce the crash with my local build, but it doesn't have debug enabled. Also reproduced with the bisect builds
Comment 13 Noel Grandin 2020-03-03 19:55:47 UTC
Thanks for the backtrace, I see what the problem is. Will do a patch tomorrow.
Comment 14 Commit Notification 2020-03-04 12:35:36 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5da687891223488f46d08d705585ace1900ba0f4

tdf#131015 crash using the pipette in Edit Contour dialog

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Xisco Faulí 2020-03-05 09:30:40 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: bdfd0feefe3785e1ea68bf1f1f987147c8fe9335
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Noel, thanks for fixing this issue!!