tdf#131015 crash using the pipette in Edit Contour dialog

regression from
    commit 52fece12345161911da2a531213b7d5541192aad
    Date:   Wed Jan 15 12:43:19 2020 +0200
    tweak GetBitmap methods in BitmapEx
we end up self-assigning, and with a little bit of optimisation, we can
up overwriting parts of the graphic we need to construct the new
graphic.

Change-Id: Ie7e9ce3f9a69f1fe954079873c206985b81db68a